--- a/development/styles/_file.css
+++ b/development/styles/_file.css
@@ -1,12 +1,26 @@
 .file {
+    position: relative;
     display: inline-block;
     vertical-align: top;
-    padding: 10px 0 10px 58px;
-    position: relative;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 58px;
     font-size: 16px;
     line-height: 28px;
     color: #999999;
 }
+    .file::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        display: block;
+        width: 48px;
+        height: 48px;
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+
 
 .file_kind_doc {
 
@@ -19,17 +33,6 @@
 .file_kind_xls {
 
 }
-    .file::before {
-        content: "";
-        position: absolute;
-        left: 0;
-        top: 0;
-        display: block;
-        width: 48px;
-        height: 48px;
-        background-repeat: no-repeat;
-    }
-
     .file_kind_doc::before { background-image: url("../sprites/file_kind_doc.png"); }
     .file_kind_pdf::before { background-image: url("../sprites/file_kind_pdf.png"); }
     .file_kind_xls::before { background-image: url("../sprites/file_kind_xls.png"); }
