--- a/development/styles/_main.css
+++ b/development/styles/_main.css
@@ -3,12 +3,15 @@
 }
     .main__wrap {
         display: flex;
+        align-items: flex-start;
     }
         .main__sidebar {
-            flex: 0 0 280px;
-            margin: 0 20px 0 0;
+            width: 280px;
+            flex-shrink: 0;
+            margin-right: 20px;
         }
 
         .main__content {
-            flex: 0 0 660px;
+            width: 660px;
+            flex-shrink: 0;
         }
