--- a/development/styles/_breadcrumbs.css
+++ b/development/styles/_breadcrumbs.css
@@ -5,27 +5,11 @@
     display: flex;
     flex-wrap: wrap;
 }
-    .breadcrumbs__item {
-        margin: 0 0 0 20px;
-        position: relative;
+    .breadcrumbs__link {
+
     }
 
-    .breadcrumbs__item:first-child {
-        margin-left: 0;
+    .breadcrumbs__separator {
+        margin-left: 4px;
+        margin-right: 4px;
     }
-
-    .breadcrumbs__item::before {
-        content: "/";
-        position: absolute;
-        right: 100%;
-        top: 0;
-        margin: 0 8px 0 0;
-    }
-
-    .breadcrumbs__item:first-child::before {
-        display: none;
-    }
-
-        .breadcrumbs__link {
-            color: #999999;
-        }
