--- a/development/styles/_channel.css
+++ b/development/styles/_channel.css
@@ -1,14 +1,9 @@
 .channel {
     position: relative;
+    display: inline-block;
+    vertical-align: top;
     padding-left: 30px;
-}
-
-.channel_via_phone {
-
-}
-
-.channel_via_email {
-
+    color: inherit;
 }
     .channel::before {
         content: "";
@@ -16,25 +11,21 @@
         left: 0;
         top: 0;
         display: block;
+        width: 20px;
+        height: 20px;
         background-repeat: no-repeat;
+        background-position: center center;
     }
 
-    .channel_via_phone::before {
-        width: 20px;
-        height: 20px;
-        background-image: url("../sprites/channel_via_phone.png");
-    }
-
-    .channel_via_email::before {
-        width: 20px;
-        height: 20px;
-        background-image: url("../sprites/channel_via_email.png");
-    }
+.channel_via_phone {
+    text-decoration: none;
+}
 
 
-    @media
-    (-webkit-min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi) {
-        .channel_via_phone::before { background-image: url("../sprites/channel_via_phone@2x.png"); background-size: 100% 100%; }
-        .channel_via_email::before { background-image: url("../sprites/channel_via_email@2x.png"); background-size: 100% 100%; }
-    }
+.channel_via_phone::before { background-image: url("../sprites/channel_via_phone.png"); }
+.channel_via_email::before { background-image: url("../sprites/channel_via_email.png"); }
+
+@media (min-resolution: 2dppx) {
+    .channel_via_phone::before { background-image: url("../sprites/channel_via_phone@2x.png"); background-size: 100% 100%; }
+    .channel_via_email::before { background-image: url("../sprites/channel_via_email@2x.png"); background-size: 100% 100%; }
+}
