--- a/development/styles/_logo.css
+++ b/development/styles/_logo.css
@@ -2,7 +2,7 @@
     display: block;
     width: 208px;
     height: 80px;
-    line-height: 72px;
+    padding: 28px 30px;
     text-align: center;
-    background: rgba(255, 255, 255, 0.5);
+    background-color: rgba(0, 0, 0, 0.1);
 }
