--- a/development/styles/_menu.css
+++ b/development/styles/_menu.css
@@ -1,19 +1,19 @@
 .menu {
-    margin: 0;
-    padding: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
     list-style: none;
 }
     .menu__item {
-        margin: 10px 0 0;
+        margin-top: 10px;
     }
 
     .menu__item:first-child {
         margin-top: 0;
     }
-
         .menu__link {
             display: block;
-            padding: 10px;
-            text-decoration: none;
+            padding: 10px 14px;
             background: rgba(255, 0, 0, 0.2);
+            text-decoration: none;
         }
