--- a/development/styles/_sidebar.css
+++ b/development/styles/_sidebar.css
@@ -1,10 +1,10 @@
 .sidebar {
 
 }
-    .sidebar__section {
-        margin: 40px 0 0;
+    .sidebar__item {
+        margin-top: 40px;
     }
 
-    .sidebar__section:first-child {
+    .sidebar__item:first-child {
         margin-top: 0;
     }
