--- a/development/styles/_social.css
+++ b/development/styles/_social.css
@@ -1,11 +1,8 @@
 .social {
-    margin: 0;
-    padding: 0;
-    list-style: none;
     display: flex;
 }
     .social__item {
-        margin: 0 0 0 10px;
+        margin-left: 10px;
     }
 
     .social__item:first-child {
