--- a/development/styles/_table.css
+++ b/development/styles/_table.css
@@ -1,6 +1,6 @@
 .table {
     width: 100%;
-    background: #EEEEEE;
+    background-color: #EEEEEE;
     border-collapse: collapse;
 /*
     border-collapse: separate;
@@ -20,14 +20,14 @@
     }
 
     .table__section_part_foot {
-        background: #D5E1EE;
+        background-color: #D5E1EE;
     }
         .table__row {
 
         }
 
         .table__section_part_body .table__row:nth-child(odd) {
-            background: #F4F4F4;
+            background-color: #F4F4F4;
         }
             .table__cell {
                 padding: 5px 10px 3px;
