--- a/development/styles/_video.css
+++ b/development/styles/_video.css
@@ -1,24 +1,31 @@
 .video {
+    background-color: #000000;
+}
+    .video__widget {
+        vertical-align: top;
+        border: none;
+    }
+
+
+
+.video_ratio_16x9,
+.video_ratio_4x3,
+.video_ratio_1x1 {
     position: relative;
     width: 100%;
     height: 0;
-    padding-bottom: 56.25%; /* 16:9 */
-    background-color: #000000;
 }
 
-.video_ratio_4x3 {
-    padding-bottom: 75%;
-}
+.video_ratio_16x9 { padding-bottom: 56.25%; }
+.video_ratio_4x3  { padding-bottom: 75%; }
+.video_ratio_1x1  { padding-bottom: 100%; }
 
-.video_ratio_1x1 {
-    padding-bottom: 100%;
-}
-    .video__widget {
+    .video_ratio_16x9 .video__widget,
+    .video_ratio_4x3  .video__widget,
+    .video_ratio_1x1  .video__widget {
         position: absolute;
         left: 0;
         top: 0;
         width: 100%;
         height: 100%;
-        vertical-align: top;
-        border: none;
     }
