--- a/development/styles/_window.css
+++ b/development/styles/_window.css
@@ -3,7 +3,7 @@
     width: 300px;
     margin: 20px auto;
     padding: 20px;
-    background: #FFFFFF;
+    background-color: #FFFFFF;
 }
     .window__close {
         position: absolute;
@@ -16,5 +16,5 @@
     }
 
     .window__body {
-        margin: 10px 0 0;
+        margin-top: 20px;
     }
