--- a/development/styles/style.css
+++ b/development/styles/style.css
@@ -9,17 +9,19 @@
 @import url("_button.css");
 @import url("_channel.css");
 @import url("_clearfix.css");
+@import url("_company.css");
 @import url("_contacts.css");
 @import url("_container.css");
 @import url("_content.css");
 @import url("_countdown.css");
+@import url("_downloads.css");
 @import url("_file.css");
 @import url("_footer.css");
 @import url("_form.css");
 @import url("_header.css");
 @import url("_info.css");
 @import url("_input.css");
-@import url("_item-preview.css");
+@import url("_unit.css");
 @import url("_link.css");
 @import url("_logo.css");
 @import url("_main.css");
@@ -32,8 +34,10 @@
 @import url("_related.css");
 @import url("_root.css");
 @import url("_sidebar.css");
+@import url("_search.css");
 @import url("_social.css");
 @import url("_table.css");
+@import url("_tag.css");
 @import url("_tiles.css");
 @import url("_title.css");
 @import url("_universal.css");
