Rewrite Magnific popup modal layout

--- a/development/layouts/index.html
+++ b/development/layouts/index.html
@@ -89,7 +89,7 @@
                             <a class="breadcrumbs__link" href="#">News</a>
                         </div>
                         <div class="content__body">
-                            <!-- unique part of a page starts here -->
+                            <!-- unique page content -->
                             <article class="article">
                                 <header class="article__summary">
                                     <h1 class="article__heading title title_importance_higher">Lorem Ipsum Dolor Sit Amen</h1>
@@ -164,7 +164,7 @@
                                     <a class="tag" href="#">second tag</a>
                                 </footer>
                             </article>
-                            <!-- unique part of a page ends here -->
+                            <!--/unique page content -->
                         </div>
                         <div class="content__addition">
                             <form class="form">
@@ -342,15 +342,17 @@
                 </div>
             </footer>
         </div>
+
+        <!-- Modal -->
         <div class="window mfp-hide" id="login">
             <div class="window__heading title">
-                Hello, Magnific Popup!
+                Magnific Popup!
             </div>
-            <button class="window__close magnific-close" type="button">
+            <button class="window__close mfp-close" type="button">
                 Close
             </button>
             <div class="window__body">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum venenatis at nunc eget porta.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla auctor metus orci. Quisque non diam vitae eros gravida sodales. Nullam placerat ultrices facilisis. Donec tincidunt quis massa et ornare. In id ex ipsum. Suspendisse in ex sem.
             </div>
         </div>
 
