--- a/development/styles/_window.css
+++ b/development/styles/_window.css
@@ -1,20 +1,45 @@
 .window {
     position: relative;
-    width: 300px;
-    margin: 20px auto;
+    width: 400px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
     padding: 20px;
     background-color: #FFFFFF;
 }
-    .window__close {
-        position: absolute;
-        right: 10px;
-        top: 10px;
-    }
-
     .window__heading {
 
     }
 
+    .window__close {
+        position: absolute;
+        right: 10px !important;
+        top: 10px !important;
+        text-indent: 100%;
+        white-space: nowrap;
+        overflow: hidden !important;
+        opacity: 1;
+    }
+        .window__close::after {
+            content: "×";
+            position: absolute;
+            left: 0;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            text-indent: 0;
+            color: #333333;
+        }
+
+        .window__close:hover::after {
+            color: #666666;
+        }
+
+        .window__close:active::after {
+            color: #000000;
+        }
+
+        
     .window__body {
         margin-top: 20px;
     }
