--- a/development/styles/style.css
+++ b/development/styles/style.css
@@ -26,6 +26,7 @@
 @import url("_logo.css");
 @import url("_main.css");
 @import url("_menu.css");
+@import url("_mfp.css");
 @import url("_nav.css");
 @import url("_net.css");
 @import url("_page.css");
