--- a/development/styles/_body.css
+++ b/development/styles/_body.css
@@ -1,4 +1,5 @@
 .body {
+    min-width: 1000px;
     margin: 0;
     background-color: #F5F2ED;
     background-image: url("../images/background.jpg");
