Update retinaze media sources

--- a/development/styles/_article.css
+++ b/development/styles/_article.css
@@ -17,6 +17,7 @@
         .article__preview {
             margin-top: 14px;
             vertical-align: top;
+            background-color: #CCCCCC;
         }
 
     .article__content {
