--- a/development/layouts/index.html
+++ b/development/layouts/index.html
@@ -62,7 +62,13 @@
                         </ul>
                         <div class="sidebar__item">
                             <a class="info" href="#">
-                                <img class="info__content" src="../temp/info.jpg" alt="">
+                                <img class="info__content"
+                                     srcset="../temp/info@2x.jpg 2x"
+                                     src="../temp/info.jpg"
+                                     width="280"
+                                     height="400"
+                                     alt=""
+                                >
                             </a>
                         </div>
                         <div class="sidebar__item">
@@ -94,7 +100,13 @@
                                 <header class="article__summary">
                                     <h1 class="article__heading title title_importance_higher">Lorem Ipsum Dolor Sit Amen</h1>
                                     <time class="article__note" datetime="2017-12-31T19:59+04:00">Dec 31, 2017 at 23:59</time>
-                                    <img class="article__preview" src="../temp/nature.jpg" width="660" height="439" alt="">
+                                    <img class="article__preview"
+                                         srcset="../temp/bliss@2x.jpg 2x"
+                                         src="../temp/bliss.jpg"
+                                         width="660"
+                                         height="412"
+                                         alt=""
+                                    >
                                 </header>
                                 <div class="article__content wysiwyg">
                                     <h2>Suspendisse potenti</h2>
@@ -104,7 +116,12 @@
                                     <hr>
                                     <blockquote>Morbi feugiat tellus vel justo pharetra vel hendrerit tortor congue. Vivamus dui leo, porttitor eget ultricies non, tincidunt nec leo. In hac habitasse platea dictumst. Pellentesque mattis sagittis iaculis. Pellentesque lacinia neque in tortor viverra volutpat suscipit tortor placerat. Suspendisse potenti. Nulla purus tortor, hendrerit sit amet tristique ut, lacinia at nibh. Vivamus vehicula lacus id est viverra eget euismod lorem blandit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam eu lacus diam, et consequat urna. Curabitur neque magna, tempus ac tristique vel, ultrices sollicitudin tellus. Pellentesque nisl mi, ullamcorper eget feugiat vitae, sodales ac tellus. Nulla venenatis dolor in eros elementum a fringilla tellus dictum. Sed lacus tellus, sollicitudin et cursus vel, mollis at est.</blockquote>
                                     <figure>
-                                        <img src="../temp/space.jpg" alt="">
+                                        <img srcset="../temp/space@2x.jpg 2x"
+                                             src="../temp/space.jpg"
+                                             width="580"
+                                             height="362"
+                                             alt=""
+                                        >
                                         <figcaption>Space: the final frontier!</figcaption>
                                     </figure>
                                     <ul>
@@ -122,7 +139,7 @@
                                 </div>
                                 <div class="article__gallery">
                                     <div class="video">
-                                        <iframe class="video__widget" width="660" height="371" src="https://www.youtube.com/embed/EqLyNGrBUDs" allowfullscreen></iframe>
+                                        <iframe class="video__widget" width="660" height="371" src="https://www.youtube.com/embed/H2Hy96sOnq8" allowfullscreen></iframe>
                                     </div>
                                 </div>
                                 <div class="article__additional">
@@ -197,10 +214,16 @@
                             <div class="tiles__item">
                                 <article class="unit">
                                     <a class="unit__preview" href="#">
-                                        <img class="unit__image" src="../temp/dualshock1.jpg" alt="">
+                                        <img class="unit__image"
+                                             srcset="../temp/dualshock-01@2x.jpg 2x"
+                                             src="../temp/dualshock-01.jpg"
+                                             width="225"
+                                             height="175"
+                                             alt=""
+                                        >
                                     </a>
                                     <h2 class="unit__heading title title_importance_lower">
-                                        <a class="unit__link" href="#">Dualshock 1</a>
+                                        <a class="unit__link" href="#">dualshock-0 1</a>
                                     </h2>
                                     <div class="unit__description">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tortor nisi, rhoncus ac magna vitae, ornare blandit nibh.
@@ -213,10 +236,16 @@
                             <div class="tiles__item">
                                 <article class="unit">
                                     <a class="unit__preview" href="#">
-                                        <img class="unit__image" src="../temp/dualshock2.jpg" alt="">
+                                        <img class="unit__image"
+                                             srcset="../temp/dualshock-02@2x.jpg 2x"
+                                             src="../temp/dualshock-02.jpg"
+                                             width="225"
+                                             height="175"
+                                             alt=""
+                                        >
                                     </a>
                                     <h2 class="unit__heading title title_importance_lower">
-                                        <a class="unit__link" href="#">Dualshock 2</a>
+                                        <a class="unit__link" href="#">dualshock-0 2</a>
                                     </h2>
                                     <div class="unit__description">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tortor nisi, rhoncus ac magna vitae, ornare blandit nibh.
@@ -229,10 +258,16 @@
                             <div class="tiles__item">
                                 <article class="unit">
                                     <a class="unit__preview" href="#">
-                                        <img class="unit__image" src="../temp/dualshock3.jpg" alt="">
+                                        <img class="unit__image"
+                                             srcset="../temp/dualshock-03@2x.jpg 2x"
+                                             src="../temp/dualshock-03.jpg"
+                                             width="225"
+                                             height="175"
+                                             alt=""
+                                        >
                                     </a>
                                     <h2 class="unit__heading title title_importance_lower">
-                                        <a class="unit__link" href="#">Dualshock 3</a>
+                                        <a class="unit__link" href="#">dualshock-0 3</a>
                                     </h2>
                                     <div class="unit__description">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tortor nisi, rhoncus ac magna vitae, ornare blandit nibh.
@@ -245,10 +280,16 @@
                             <div class="tiles__item">
                                 <article class="unit">
                                     <a class="unit__preview" href="#">
-                                        <img class="unit__image" src="../temp/dualshock4.jpg" alt="">
+                                        <img class="unit__image"
+                                             srcset="../temp/dualshock-04@2x.jpg 2x"
+                                             src="../temp/dualshock-04.jpg"
+                                             width="225"
+                                             height="175"
+                                             alt=""
+                                        >
                                     </a>
                                     <h2 class="unit__heading title title_importance_lower">
-                                        <a class="unit__link" href="#">Dualshock 4</a>
+                                        <a class="unit__link" href="#">dualshock-0 4</a>
                                     </h2>
                                     <div class="unit__description">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tortor nisi, rhoncus ac magna vitae, ornare blandit nibh.
