Update and retinaze sprites

--- a/development/styles/_channel.css
+++ b/development/styles/_channel.css
@@ -15,6 +15,7 @@
         height: 20px;
         background-repeat: no-repeat;
         background-position: center center;
+        background-size: 20px 20px;
     }
 
 .channel_via_phone {
