--- a/development/styles/_video.css
+++ b/development/styles/_video.css
@@ -16,6 +16,7 @@
     height: 0;
 }
 
+/* stylelint-disable block-opening-brace-space-before, selector-descendant-combinator-no-non-space */
 .video_ratio_16x9 { padding-bottom: 56.25%; }
 .video_ratio_4x3  { padding-bottom: 75%; }
 .video_ratio_1x1  { padding-bottom: 100%; }
@@ -29,3 +30,4 @@
         width: 100%;
         height: 100%;
     }
+/* stylelint-enable */
