--- a/development/styles/_wysiwyg.css
+++ b/development/styles/_wysiwyg.css
@@ -1,5 +1,6 @@
 .wysiwyg {
-
+    font-size: var(--font_size_default-text);
+    line-height: var(--font_line_default-text);
 }
 
 .wysiwyg p,
@@ -8,7 +9,8 @@
 .wysiwyg hr,
 .wysiwyg figure,
 .wysiwyg blockquote {
-    margin: 1.5em 0 0;
+    margin-top: calc( var(--font_line_default-text) * 1.5 );
+    margin-bottom: calc( var(--font_line_default-text) * 1.5 );
 }
 
 .wysiwyg p:first-child,
@@ -20,19 +22,48 @@
     margin-top: 0;
 }
 
-
-.wysiwyg ul,
-.wysiwyg ol {
-    padding-left: 40px;
+.wysiwyg p:last-child,
+.wysiwyg ul:last-child,
+.wysiwyg ol:last-child,
+.wysiwyg hr:last-child,
+.wysiwyg figure:last-child,
+.wysiwyg blockquote:last-child {
+    margin-bottom: 0;
 }
+
 
 .wysiwyg ul {
-    list-style: disc;
+    padding-left: 40px;
+    list-style: none;
 }
+    .wysiwyg ul li {
+        position: relative;
+    }
+        .wysiwyg ul li::before {
+            position: absolute;
+            right: 100%;
+            margin-right: 5px;
+            top: 0;
+            content: "—";
+        }
 
 .wysiwyg ol {
-    list-style: decimal;
+    counter-reset: wysiwyg-ordered-list;
+    padding-left: 40px;
+    list-style: none;
 }
+    .wysiwyg ol li {
+        counter-increment: wysiwyg-ordered-list;
+        position: relative;
+    }
+        .wysiwyg ol li::before {
+            content: counter(wysiwyg-ordered-list) ") ";
+            position: absolute;
+            right: 100%;
+            margin-right: 5px;
+            top: 0;
+        }
+
 
 .wysiwyg blockquote {
     margin-left: 40px;
@@ -48,9 +79,54 @@
     margin-right: 40px;
 }
     .wysiwyg figcaption {
-        margin: 4px 0 0;
+        margin-top: 4px;
         text-align: center;
     }
+
+
+.wysiwyg hr {
+    height: 0;
+    border-top: 1px solid;
+}
+
+
+.wysiwyg h2 {
+    font-weight: var(--font_weight_strong);
+    font-size: var( --font_size_default-title);
+    line-height: var(--font_line_default-title);
+    margin-top: var(--font_line_default-title);
+    margin-bottom: var(--font_line_default-title);
+}
+
+.wysiwyg h3 {
+    font-weight: var(--font_weight_strong);
+    font-size: var( --font_size_smaller-title);
+    line-height: var(--font_line_smaller-title);
+    margin-top: var(--font_line_smaller-title);
+    margin-bottom: var(--font_line_smaller-title);
+}
+
+.wysiwyg h4 {
+    font-weight: var(--font_weight_strong);
+    font-size: var( --font_size_smallest-title);
+    line-height: var(--font_line_smallest-title);
+    margin-top: var(--font_line_smallest-title);
+    margin-bottom: var(--font_line_smallest-title);
+}
+
+.wysiwyg h2:first-child,
+.wysiwyg h3:first-child,
+.wysiwyg h4:first-child {
+    margin-top: 0;
+}
+
+.wysiwyg h2:last-child,
+.wysiwyg h3:last-child,
+.wysiwyg h4:last-child {
+    margin-bottom: 0;
+}
+
+
 
 .wysiwyg a {
     color: #999999;
@@ -59,39 +135,6 @@
 
 .wysiwyg a:hover {
     text-decoration: none;
-}
-
-
-.wysiwyg hr {
-    height: 0;
-    border-top: 1px solid;
-}
-
-.wysiwyg h2 {
-    font-weight: var(--font_weight_strong);
-    font-size: 1.5em;
-    line-height: 1;
-    margin: 0.83em 0 0;
-}
-
-.wysiwyg h3 {
-    font-weight: var(--font_weight_strong);
-    font-size: 1.17em;
-    line-height: 1.1;
-    margin: 1em 0 0;
-}
-
-.wysiwyg h4 {
-    font-weight: var(--font_weight_strong);
-    font-size: 1em;
-    line-height: 1.2;
-    margin: 1.33em 0 0;
-}
-
-.wysiwyg h2:first-child,
-.wysiwyg h3:first-child,
-.wysiwyg h4:first-child {
-    margin-top: 0;
 }
 
 
