Update .unit titles

--- a/development/layouts/index.html
+++ b/development/layouts/index.html
@@ -223,7 +223,7 @@
                                         >
                                     </a>
                                     <h2 class="unit__heading title title_importance_lower">
-                                        <a class="unit__link" href="#">dualshock-0 1</a>
+                                        <a class="unit__link" href="#">DualShock</a>
                                     </h2>
                                     <div class="unit__description">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tortor nisi, rhoncus ac magna vitae, ornare blandit nibh.
@@ -245,7 +245,7 @@
                                         >
                                     </a>
                                     <h2 class="unit__heading title title_importance_lower">
-                                        <a class="unit__link" href="#">dualshock-0 2</a>
+                                        <a class="unit__link" href="#">DualShock 2</a>
                                     </h2>
                                     <div class="unit__description">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tortor nisi, rhoncus ac magna vitae, ornare blandit nibh.
@@ -267,7 +267,7 @@
                                         >
                                     </a>
                                     <h2 class="unit__heading title title_importance_lower">
-                                        <a class="unit__link" href="#">dualshock-0 3</a>
+                                        <a class="unit__link" href="#">DualShock 3</a>
                                     </h2>
                                     <div class="unit__description">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tortor nisi, rhoncus ac magna vitae, ornare blandit nibh.
@@ -289,7 +289,7 @@
                                         >
                                     </a>
                                     <h2 class="unit__heading title title_importance_lower">
-                                        <a class="unit__link" href="#">dualshock-0 4</a>
+                                        <a class="unit__link" href="#">DualShock 4</a>
                                     </h2>
                                     <div class="unit__description">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tortor nisi, rhoncus ac magna vitae, ornare blandit nibh.
