--- a/development/layouts/index.html
+++ b/development/layouts/index.html
@@ -27,9 +27,11 @@
         <div class="page">
             <header class="page__head header">
                 <div class="header__wrap container">
-                    <a class="header__emblem logo" href="#">Logo</a>
+                    <a class="header__emblem logo" href="#">
+                        nuqneH
+                    </a>
                     <form class="header__search search">
-                        <input class="search__field" type="search">
+                        <input class="search__field" type="search" placeholder="Search">
                         <button class="search__submit" type="submit">Search!</button>
                     </form>
                     <div class="header__user">
@@ -94,7 +96,7 @@
                             <span class="breadcrumbs__separator">→</span>
                             <a class="breadcrumbs__link" href="#">News</a>
                         </div>
-                        <div class="content__body">
+                        <main class="content__body">
                             <!-- unique page content -->
                             <article class="article">
                                 <header class="article__summary">
@@ -182,7 +184,7 @@
                                 </footer>
                             </article>
                             <!--/unique page content -->
-                        </div>
+                        </main>
                         <div class="content__addition">
                             <form class="form">
                                 <h2 class="form__heading title">
@@ -222,9 +224,9 @@
                                              alt=""
                                         >
                                     </a>
-                                    <h2 class="unit__heading title title_importance_lower">
+                                    <h3 class="unit__heading title title_importance_lower">
                                         <a class="unit__link" href="#">DualShock</a>
-                                    </h2>
+                                    </h3>
                                     <div class="unit__description">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tortor nisi, rhoncus ac magna vitae, ornare blandit nibh.
                                     </div>
@@ -244,9 +246,9 @@
                                              alt=""
                                         >
                                     </a>
-                                    <h2 class="unit__heading title title_importance_lower">
+                                    <h3 class="unit__heading title title_importance_lower">
                                         <a class="unit__link" href="#">DualShock 2</a>
-                                    </h2>
+                                    </h3>
                                     <div class="unit__description">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tortor nisi, rhoncus ac magna vitae, ornare blandit nibh.
                                     </div>
@@ -266,9 +268,9 @@
                                              alt=""
                                         >
                                     </a>
-                                    <h2 class="unit__heading title title_importance_lower">
+                                    <h3 class="unit__heading title title_importance_lower">
                                         <a class="unit__link" href="#">DualShock 3</a>
-                                    </h2>
+                                    </h3>
                                     <div class="unit__description">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tortor nisi, rhoncus ac magna vitae, ornare blandit nibh.
                                     </div>
@@ -288,9 +290,9 @@
                                              alt=""
                                         >
                                     </a>
-                                    <h2 class="unit__heading title title_importance_lower">
+                                    <h3 class="unit__heading title title_importance_lower">
                                         <a class="unit__link" href="#">DualShock 4</a>
-                                    </h2>
+                                    </h3>
                                     <div class="unit__description">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tortor nisi, rhoncus ac magna vitae, ornare blandit nibh.
                                     </div>
