--- a/development/styles/style.css
+++ b/development/styles/style.css
@@ -3,6 +3,7 @@
 
 @import url("_arrivals.css");
 @import url("_article.css");
+@import url("_html.css");
 @import url("_body.css");
 @import url("_breadcrumbs.css");
 @import url("_browserupgrade.css");
