--- a/development/layouts/index.html
+++ b/development/layouts/index.html
@@ -8,7 +8,7 @@
         <!--<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=cyrillic" rel="stylesheet">-->
         <link rel="stylesheet" href="../styles/style.css">
     </head>
-    <body class="body">
+    <body>
 
         <!--[if IE]>
             <div class="browserupgrade">
@@ -400,7 +400,7 @@
         </div>
 
         <!-- jQuery -->
-        <script src="../vendors/jquery/jquery-3.2.0.min.js"></script>
+        <script src="../vendors/jquery/jquery-3.2.1.min.js"></script>
 
         <!-- Outline.js -->
         <script src="../vendors/outline/outline.js"></script>
