--- a/development/styles/_input.css
+++ b/development/styles/_input.css
@@ -10,8 +10,9 @@
     .input__widget {
         width: 100%;
         height: 40px;
+        vertical-align: top;
         padding: 10px 14px;
-        background: #FFFFFF;
+        background-color: #FFFFFF;
         border: 1px solid #B3B3B3;
         outline: none;
         background-clip: padding-box; /* reset iOS default shadow */
@@ -50,6 +51,7 @@
 }
     .input_type_area .input__widget {
         vertical-align: top;
-        height: 60px;
+        height: auto; /* user rows="" attribute */
+        min-height: 40px; /* one row */
         resize: vertical;
     }
