--- a/development/styles/_mfp.css
+++ b/development/styles/_mfp.css
@@ -8,7 +8,7 @@
 
 .mfp-container {
     display: inline-block;
-    padding-left: 8px;      /* vertical */
+    padding-left: 8px;      /* horizontal */
     padding-right: 8px;     /* space around */
     vertical-align: top;
     width: auto;
@@ -17,7 +17,7 @@
 }
 
 .mfp-content {
-    margin-top: 8px;        /* horizontal */
+    margin-top: 8px;        /* vertical */
     margin-bottom: 8px;     /* space around */
     text-align: center;
 }
