Responsive magnific popup

--- a/development/layouts/index.html
+++ b/development/layouts/index.html
@@ -388,14 +388,16 @@
 
         <!-- Modal -->
         <div class="window mfp-hide" id="login">
-            <div class="window__heading title">
-                Magnific Popup!
-            </div>
             <button class="window__close mfp-close" type="button">
                 Close
             </button>
-            <div class="window__body">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla auctor metus orci. Quisque non diam vitae eros gravida sodales. Nullam placerat ultrices facilisis. Donec tincidunt quis massa et ornare. In id ex ipsum. Suspendisse in ex sem.
+            <div class="login">
+                <h2 class="login__heading">
+                    Magnific Popup!
+                </h2>
+                <div class="login__body">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequatur debitis eligendi fugiat provident sed, velit! At debitis dolore fuga ipsum laudantium nemo reiciendis temporibus voluptates? Ab, accusantium aspernatur cumque dicta ducimus eaque eius eos eum in maxime nihil nulla numquam velit. Accusamus, aliquid atque beatae culpa cupiditate fugiat iure iusto non odit pariatur quae saepe ullam voluptatibus.
+                </div>
             </div>
         </div>
 
