--- a/development/styles/_mfp.css
+++ b/development/styles/_mfp.css
@@ -8,8 +8,8 @@
 
 .mfp-container {
     display: inline-block;
-    padding-left: 8px;      /* horizontal */
-    padding-right: 8px;     /* space around */
+    padding-left: 8px;      /* horizontal spacing */
+    padding-right: 8px;     /* horizontal spacing */
     vertical-align: top;
     width: auto;
     min-width: 100%;
@@ -17,8 +17,8 @@
 }
 
 .mfp-content {
-    margin-top: 8px;        /* vertical */
-    margin-bottom: 8px;     /* space around */
+    margin-top: 8px;        /* vertical spacing */
+    margin-bottom: 8px;     /* vertical spacing */
     text-align: center;
 }
 
