--- a/development/styles/_window.css
+++ b/development/styles/_window.css
@@ -1,16 +1,11 @@
 .window {
     position: relative;
-    width: 400px;
     display: inline-block;
     vertical-align: top;
     text-align: left;
-    padding: 20px;
     background-color: #FFFFFF;
+    border-radius: 4px;
 }
-    .window__heading {
-
-    }
-
     .window__close {
         position: absolute;
         right: 10px !important;
@@ -38,8 +33,3 @@
         .window__close:active::after {
             color: #000000;
         }
-
-
-    .window__body {
-        margin-top: 20px;
-    }
