--- a/src/styles/_root.css
+++ b/src/styles/_root.css
@@ -1,9 +1,19 @@
-/* stylelint-disable declaration-colon-space-after */
 :root {
     --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica Neue, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     --ease-out-quint: cubic-bezier(0.22, 1, 0.36, 1);
     --transition-hover: 0.1s ease;
     --transition-show: 1.2s var(--ease-out-quint);
-    --container-padding: 30px;
+    --container-padding: 40px;
 }
-/* stylelint-enable declaration-colon-space-after */
+
+@media (350px < width < 599px) {
+    :root {
+        --container-padding: 20px;
+    }
+}
+
+@media (width < 349px) {
+    :root {
+        --container-padding: 15px;
+    }
+}
