--- a/src/styles/_container.css
+++ b/src/styles/_container.css
@@ -1,5 +1,13 @@
 .container {
     width: 960px;
+    border-left: var(--container-padding) solid transparent;
+    border-right: var(--container-padding) solid transparent;
     margin-left: auto;
     margin-right: auto;
+}
+
+@media (width < 599px) {
+    .container {
+        width: auto;
+    }
 }
