--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -11,17 +11,15 @@
     <body>
 
         <!--[if IE]>
-            <div class="browserupgrade">
-                Вы используете <strong>устаревший</strong> браузер. Для корректной работы этого сайта и большинства других
-                Вам необходимо <a href="http://browsehappy.com/?locale=ru_RU">обновить ваш браузер</a>.
+            <div class="browser-upgrade">
+                Вы используете устаревший браузер. Для корректной работы этого сайта и большинства других вам необходимо перейти на современный&nbsp;браузер.
             </div>
         <![endif]-->
 
         <!--[if IE]>
-            <div class="browserupgrade">
-                You are using an <strong>outdated</strong> browser.
-                Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
-            </div>
+        <div class="browser-upgrade">
+            It appears that you're using an outdated browser. For this site and most others to work correctly, you need to switch to a modern browser.
+        </div>
         <![endif]-->
 
         <div class="container">
