--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,7 +5,7 @@
 @import url("_root.css");
 @import url("_html.css");
 @import url("_body.css");
-@import url("_browserupgrade.css");
+@import url("_browser-upgrade.css");
 @import url("_mfp.css");
 @import url("_window.css");
 @import url("_container.css");
