Rename browser upgrade class

--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -11,13 +11,13 @@
     <body>
 
         <!--[if IE]>
-            <div class="browser-upgrade">
+            <div class="browser">
                 Вы используете устаревший браузер. Для корректной работы этого сайта и большинства других вам необходимо перейти на современный&nbsp;браузер.
             </div>
         <![endif]-->
 
         <!--[if IE]>
-        <div class="browser-upgrade">
+        <div class="browser">
             It appears that you're using an outdated browser. For this site and most others to work correctly, you need to switch to a modern browser.
         </div>
         <![endif]-->
