--- a/src/styles/_browser.css
+++ b/src/styles/_browser.css
@@ -1,4 +1,4 @@
-.browser-upgrade {
+.browser {
     padding: 8px var(--container-padding) 10px;
     background-color: #EF5350;
     color: #FFFFFF;
