--- a/src/styles/_button.css
+++ b/src/styles/_button.css
@@ -3,7 +3,7 @@
     vertical-align: top;
     border: none;
     padding: 11px 14px;
-    background-color: var(--color_action_primary);
+    background-color: #F08080;
     border-radius: 4px;
     font-family: inherit;
     font-size: 12px;
@@ -16,13 +16,11 @@
 }
 
 .button:hover {
-    background: var(--color_action_secondary);
-    color: #EEEEEE;
+    background-color: #E07373;
 }
 
 
-.button_size_larger {
-    padding: 18px 24px;
-    font-size: 16px;
-    line-height: 24px;
+.button:active {
+    transform: translateY(1px);
 }
+
