--- a/src/styles/_button.css
+++ b/src/styles/_button.css
@@ -2,17 +2,19 @@
     display: inline-block;
     vertical-align: top;
     border: none;
-    padding: 11px 14px;
+    padding: 13px 24px;
+    min-width: 100px;
     background-color: #F08080;
-    border-radius: 4px;
+    border-radius: 6px;
     font-family: inherit;
-    font-size: 12px;
-    line-height: 18px;
+    font-size: 16px;
+    line-height: 24px;
     color: #FFFFFF;
     text-align: center;
     text-decoration: none;
     white-space: nowrap;
     cursor: pointer;
+    user-select: none;
 }
 
 .button:hover {
@@ -24,3 +26,11 @@
     transform: translateY(1px);
 }
 
+
+.button--secondary {
+    background-color: #99C6D4;
+}
+
+.button--secondary:hover {
+    background-color: #A3D1E0;
+}
