--- a/src/styles/_button.css
+++ b/src/styles/_button.css
@@ -15,6 +15,7 @@
     white-space: nowrap;
     cursor: pointer;
     user-select: none;
+    transition: background-color var(--transition-hover);
 }
 
 .button:hover {
@@ -24,6 +25,7 @@
 
 .button:active {
     transform: translateY(1px);
+    transition: none;
 }
 
 
