--- a/src/styles/_body.css
+++ b/src/styles/_body.css
@@ -3,6 +3,6 @@ body {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     font-family: var(--font);
-    font-size: 16px;
-    line-height: 24px;
+    font-size: var(--body-font-size);
+    line-height: var(--body-line-heigth);
 }
