--- a/src/styles/_root.css
+++ b/src/styles/_root.css
@@ -1,5 +1,7 @@
 :root {
     --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica Neue, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    --body-font-size: 16px;
+    --body-line-heigth: 24px;
     --ease-out-quint: cubic-bezier(0.22, 1, 0.36, 1);
     --transition-hover: 0.1s ease;
     --transition-show: 1.2s var(--ease-out-quint);
