--- a/src/styles/_input.css
+++ b/src/styles/_input.css
@@ -2,19 +2,26 @@
 
 }
     .input__widget {
-        width: 100%;
-        height: 40px;
         vertical-align: top;
-        padding: 10px 14px;
+        width: 100%;
+        height: 50px;
+        padding: 12px 23px;
         background-color: #FFFFFF;
         border: 1px solid #B3B3B3;
         outline: none;
-        background-clip: padding-box; /* reset iOS default shadow */
-        border-radius: 0; /* reset iOS default border-radius */
+        border-radius: 3px;
         font-family: inherit;
-        font-size: 12px;
-        line-height: 18px;
-        color: var(--color_text_primary);
+        font-size: 16px;
+        line-height: 24px;
+        color: #000000;
+        transition: background-color var(--transition-hover),
+                    border-color var(--transition-hover);
+    }
+
+    .input__widget::placeholder {
+        font-style: normal;
+        opacity: 1;
+        color: #999999;
     }
 
     .input__widget:hover {
@@ -22,22 +29,18 @@
     }
 
     .input__widget:focus {
-        border-color: #333333;
+        border-color: #7E7E7E;
+        box-shadow: 0 0 0 2px #7E7E7E;
+        transition: none;
     }
 
-    /* stylelint-disable block-opening-brace-space-before */
-    .input__widget::-webkit-input-placeholder { font-style: normal; color: #B3B3B3; }
-    .input__widget::-moz-placeholder          { font-style: normal; color: #B3B3B3; opacity: 1; }
-    .input__widget:-ms-input-placeholder      { font-style: normal; color: #B3B3B3; }
-    /* stylelint-enable */
 
-
-.input_type_area {
+.input--area {
 
 }
-    .input_type_area .input__widget {
-        vertical-align: top;
-        height: auto; /* user rows="" attribute */
-        min-height: 40px; /* one row */
+    .input--area .input__widget {
+        height: auto; /* user rows="" attribute to set a default height */
+        min-height: 50px; /* equal to one row */
+        max-height: 400px;
         resize: vertical;
     }
