--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -63,6 +63,7 @@
 
         <!-- Temp -->
         <script src="../scripts/temp.js"></script>
+        <script src="../scripts/_input.js"></script>
 
     </body>
 </html>
