--- a/src/styles/_input.css
+++ b/src/styles/_input.css
@@ -7,7 +7,7 @@
         height: 50px;
         padding: 12px 23px;
         background-color: #FFFFFF;
-        border: 1px solid #B3B3B3;
+        border: 1px solid var(--input-border);
         outline: none;
         border-radius: 3px;
         font-family: inherit;
@@ -21,16 +21,16 @@
     .input__widget::placeholder {
         font-style: normal;
         opacity: 1;
-        color: #999999;
+        color: var(--placeholder-text-color);
     }
 
     .input__widget:hover {
-        border-color: #7E7E7E;
+        border-color: var(--input-border-hover);
     }
 
     .input__widget:focus {
-        border-color: #7E7E7E;
-        box-shadow: 0 0 0 2px #7E7E7E;
+        border-color: var(--input-border-hover);
+        box-shadow: 0 0 0 2px var(--input-border-hover);
         transition: none;
     }
 
@@ -44,3 +44,49 @@
         max-height: 400px;
         resize: vertical;
     }
+
+
+.input--select {
+
+}
+    .input--select .input__widget {
+        cursor: pointer;
+    }
+
+    .input--select .input__widget:hover {
+        box-shadow: none; /* same as original, not hover input */
+        border-color: var(--input-border); /* same as original, not hover input */
+        background-color: #F6F6F6;
+    }
+
+    .input--select .input__widget:focus {
+        box-shadow: none;
+        border-color: var(--input-border); /* same as original, not hover input */
+        outline: auto; /* for keyboard navigation take it back */
+    }
+
+
+
+
+.input--placeholder-is-chosen {
+
+}
+    .input--placeholder-is-chosen .input__widget {
+        color: var(--placeholder-text-color);
+    }
+
+@supports (appearance: none) {
+
+    .input--select .input__widget {
+        appearance: none;
+        padding-right: 48px;
+        background-image: url("../vectors/select.svg");
+        background-size: 16px 16px;
+        background-repeat: no-repeat;
+        background-position: right 16px center;
+    }
+
+/*    .firefox .input--select .input__widget {*/
+/*        border-left-width: 15px;*/
+/*    }*/
+}
